--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://repo.github.io/public/index.html">
+    <meta http-equiv="refresh" content="0; url=https://noahancolie.github.io/public/index.html">
     <title>NoahNotes</title>
 </head>
 <body>
-    
+    <h1>NoahNotes</h1>
 </body>
 </html>
